<resources>
    <string name="app_name">Game Collection</string>

    <string name="label_game_search">Game Search</string>
    <string name="label_game_details">Game Details</string>
    <string name="label_developer_details">Developer Details</string>
    <string name="label_favorite_games">Favorite Games</string>
    <string name="label_settings">Settings</string>

    <string name="search_hint">Search for games...</string>
    <string name="search_button">Search</string>

    <string name="search_error">We cannot find the game you want. Please try another game.</string>

    <string name="favorite_off">Favorite</string>
    <string name="favorite_on">Added</string>

    <string name="action_settings">Settings</string>
    <string name="action_favorites">Favorites</string>

    <string name="pref_category_search">Search settings</string>
    <string name="pref_sort_title">Sort by</string>
    <string name="pref_begin_year_title">Start year</string>
    <string name="pref_end_year_title">End year</string>

    <string name="pref_sort_key" translatable="false">sort</string>
    <string name="pref_begin_year_key">beginning year</string>
    <string name="pref_end_year_key">end year</string>

    <string name="pref_sort_entry_none">None</string>
    <string name="pref_sort_entry_name">Name</string>
    <string name="pref_sort_entry_released">Release Date</string>
    <string name="pref_sort_entry_added">Last Added</string>
    <string name="pref_sort_entry_created">Last Created</string>
    <string name="pref_sort_entry_updated">Last Updated</string>
    <string name="pref_sort_entry_rating">Rating</string>
    <string name="pref_sort_entry_metacritic">Metacritic</string>

    <string name="pref_sort_val_none">none</string>
    <string name="pref_sort_val_name" translatable="false">-name</string>
    <string name="pref_sort_val_released">-released</string>
    <string name="pref_sort_val_added">-added</string>
    <string name="pref_sort_val_created">-created</string>
    <string name="pref_sort_val_updated">-updated</string>
    <string name="pref_sort_val_rating">-rating</string>
    <string name="pref_sort_val_metacritic">-metacritic</string>

    <string name="pref_sort_default">@string/pref_sort_val_none</string>

</resources>